@@ -492,7 +492,7 @@ public class XarTestPipelineJob extends PipelineJob implements FileAnalysisJobSu
                 if (duration > timeout)
                 {
                     //NOTE: it's possible a job could time out on a busy cluster.  rather than fail, continue in case there's a second engine to test
-                    _log.warn("timed out waiting for job: " + job1.getDescription());
+                    _log.warn("timed out waiting for job: {}", job1.getDescription());
                     break;
                 }
             }
@@ -503,7 +503,7 @@ public class XarTestPipelineJob extends PipelineJob implements FileAnalysisJobSu
             List<? extends ExpRun> runs = ExperimentService.get().getExpRunsForJobId(sf.getRowId());
             Assert.assertEquals("Wrong run number", 1, runs.size());
 
-            ExpRun run = runs.get(0);
+            ExpRun run = runs.getFirst();
             List<? extends ExpData> inputs = run.getInputDatas(INPUT_ROLE, null);
             Assert.assertEquals("Wrong input number", inputFiles.size(), inputs.size());
 
