@@ -94,7 +94,7 @@ public class SampleDatasetTable extends LinkedDatasetTable
         if (sampleTable != null)
         {
             sqlf.append(" LEFT OUTER JOIN ").append(sampleTable.getFromSQL(sampleTableAlias)).append("\n");
-            sqlf.append(" ON ").appendDottedIdentifiers(sampleTableAlias, sampleTable.getPkColumns().get(0).getAlias()).append(" = ");
+            sqlf.append(" ON ").appendDottedIdentifiers(sampleTableAlias, sampleTable.getPkColumns().getFirst().getAlias()).append(" = ");
             var key = getColumn(_dsd.getKeyPropertyName());
             sqlf.append(key.getValueSql(alias));
         }
